--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-These files are for a submission to Indoor Air:
+These files are for a submission to Building and Environment:
 
-"Estimating potential infection risk reduction benefits for hybrid work schedules 
-in office settings using CO2 and occupancy data with modeling approaches,"
+"Could hybrid work schedules offer infection risk reductions? Insights from a CO2 Sensor and Modeling Study,"
 
 by: Yoonhee Jung [1], Kyle T Wilson [2], Amanda M. Wilson [1]
 
